[package]
name = "dbtypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.1"

[dependencies.couch_rs]
version = "0.9.0"
features = ["derive", "rustls-tls"]

[dependencies.sea-orm]
version = "0.10.1"
features = ["macros", "with-chrono", "with-json", "with-uuid"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]
