[package]
name = "tweetchive_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
ahash = "0.8"
serde_json = "1.0"

[dependencies.couch_rs]
version = "0.9"
features = ["derive", "rustls-tls"]

[dependencies.sea-orm]
version = "0.10"
features = ["macros", "with-chrono", "with-json", "with-uuid"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde", "rkyv"]

[dependencies.uuid]
version = "1.2"
features = ["serde", "v8"]

[dependencies.rkyv]
version = "0.7.39"
features = ["validation", "uuid"]

[dependencies.twtscrape]
path = "../twtscrape"
default-features = false
features = ["onlytypes"]
