[package]
name = "twitchive_unofficial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21"
thiserror = "1.0"
scraper = "0.13"
chrono = "0.4"
tokio-rayon = "2.1"
urlencoding = "2.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json", "cookies", "tokio-rustls"]