[package]
name = "tweetchive_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.20.0-rc.3"
lapin = "2.1.1"
deadpool-lapin = "0.10.0"
toml = "0.5.9"
tokio-rayon = "2.1.0"
rayon = "1.5.3"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
ahash = "0.8.2"
tikv-jemallocator = "0.5.0"
chrono = "0.4.23"
seahash = "4.1.0"
uuid = "1.2.1"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.rkyv]
version = "0.7.39"
features = ["validation"]

[dependencies.deadpool]
version = "0.9.5"
features = ["rt_tokio_1", "serde"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dependencies.flume]
version = "0.10.14"
features = ["async"]

[dependencies.twtscrape]
path = "../../common/twtscrape"

[dependencies.tweetchive_core]
path = "../../common/tweetchive_core"
