[package]
name = "tweetchive_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
deadpool-lapin = "0.10.0"
toml = "0.5.9"
tokio-rayon = "2.1.0"
rayon = "1.5.3"
color-eyre = "0.6.2"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
ahash = "0.8.2"
tikv-jemallocator = "0.5.0"
chrono = "0.4.23"
sha2 = "0.10.6"
uuid = "1.2.1"
axum = "0.6.0-rc.4"
once_cell = "1.16.0"
thiserror = "1.0.37"
memmap2 = "0.5.8"
oxipng = "6.0.1"
serde_json = "1.0.87"
dashmap = "5.4.0"

[dependencies.twitter-v2]
version = "0.1.8"
features = ["rustls-tls"]

[dependencies.opentelemetry]
version = "0.18.0"
features = ["metrics"]

[dependencies.tracing-opentelemetry]
version = "0.18.0"
features = ["metrics"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.rkyv]
version = "0.7.39"
features = ["validation"]

[dependencies.deadpool]
version = "0.9.5"
features = ["rt_tokio_1", "serde"]

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dependencies.flume]
version = "0.10.14"
features = ["async"]

[dependencies.nanorand]
version = "0.7.0"
features = ["getrandom"]

[dependencies.rust-s3]
version = "0.33.0-beta4"
default-features = false
features = ["tokio-rustls-tls", "tags", "fail-on-err"]

[dependencies.async-compression]
version = "0.3.15"
features = ["tokio", "zstd", "brotli"]

[dependencies.fantoccini]
version = "0.20.0-rc.3"
features = ["rustls-tls"]

[dependencies.twtscrape]
path = "../../common/twtscrape"

[dependencies.tweetchive_core]
path = "../../common/tweetchive_core"
