[package]
name = "tweetchive_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
serde_json = "1.0.87"
toml = "0.5.9"
tokio-tungstenite = "0.17.2"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"
rkyv = "0.7.39"
uuid = "1.2.2"
ahash = "0.8.2"
base64 = "0.20.0-alpha.1"
seahash = "4.1.0"
bytes = "1.3.0"
futures = "0.3.25"
url = "2.3.1"

[dependencies.axum]
version = "0.6.0-rc.5"
features = ["http2"]

[dependencies.sea-orm]
version = "0.10.1"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"]

[dependencies.couch_rs]
version = "0.9.0"
default-features = false
features = ["derive", "rustls-tls"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.rust-s3]
version = "0.33.0-beta4"
default-features = false
features = ["tags", "fail-on-err", "tokio-rustls-tls"]

[dependencies.tweetchive_core]
path = "../../common/tweetchive_core"
features = ["server"]
