[package]
name = "twitter_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
serde_json = "1.0.87"
toml = "0.5.9"
tokio-tungstenite = "0.17.2"
axum = "0.6.0-rc.2"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"

[dependencies.sea-orm]
version = "0.10.1"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.rust-s3]
version = "0.33.0-beta4"
default-features = false
features = ["tags", "fail-on-err", "tokio-rustls-tls"]
